--- a/src/app/components/datosclientes/datosclientes.component.html
+++ b/src/app/components/datosclientes/datosclientes.component.html
@@ -268,7 +268,7 @@
                       <div class="container">
                         <div class="row">  
 
-                          <label >Contacto 1</label>
+                          <label class="LabelNegritas" style="font-weight:bold;">Contacto 1</label>
                           <div class="form-row">
                             <div class="col-sm-3">
                               <label class="CamposGeneral"><strong>Nombre:</strong></label>
@@ -301,7 +301,7 @@
                               <label>{{oContacto.Contacto1Email}}</label>
                             </div>     
                           </div>
-                          <label >Contacto 2</label>
+                          <label class="LabelNegritas" style="font-weight:bold;">Contacto 2</label>
                           <div class="form-row">
                             <div class="col-sm-3">
                               <label class="CamposGeneral"><strong>Nombre:</strong></label>
