--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -22,7 +22,7 @@
     </section>  
 
     <nav class="navbar navbar-expand-lg bg-light shadow-lg">
-        <div class="container">
+        <div class="container-fluid">
             <a class="navbar-brand" href="#hero">
                 <!--<strong>Nomad Force</strong>-->
                 <!--<strong>Fonelli</strong>-->
@@ -32,12 +32,14 @@
                 
             </a>
 
+            <div  [style]="mobileQuery.matches ? 'width: 0px;' : 'width: 200px;'" >   </div>
+
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div *ngIf="idMenu == '1' " class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav mx-auto">
+                <ul class="navbar-nav">
                     <li class="nav-item active">
                         <a class="nav-link" href="#about">Nosotros</a>
                     </li>
@@ -197,14 +199,14 @@
 
    <!--Modal Contacto-->
    <ng-template #Contacto let-modal>
-    <div class="modal-header" data-backdrop="false" style="background-color: #00a1ca" >
+    <div class="modal-header" data-backdrop="false" style="background-color: #24a4cc" >
         
       <!--<label class= "col-9 title"  id="Contacto">¡ESCRIBENOS!</label>-->
       <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
     </div>
 
     <form #formContacto="ngForm" (ngSubmit)="onSubmitContacto(formContacto)">
-        <div class="modal-body" data-backdrop="false" style="background-color: #00a1ca">
+        <div class="modal-body" data-backdrop="false" style="background-color: #24a4cc">
           
             <div class="container">
                 <div class="row">
@@ -234,7 +236,7 @@
           <p class="alert alert-danger" role="alert">{{contacto_guardado}}</p>
         </div>
     
-        <div class="modal-footer" data-backdrop="false" style="background-color: #00a1ca">
+        <div class="modal-footer" data-backdrop="false" style="background-color: #24a4cc">
                 <button type="button" class="btn btn-primary" [disabled]="!formContacto.form.valid" (click)="addContacto()">Enviar</button>
         </div>
     </form>
