--- a/src/app/components/estadocuenta/estadocuenta.component.html
+++ b/src/app/components/estadocuenta/estadocuenta.component.html
@@ -153,7 +153,7 @@
                 <th style="background-color: #24a4cc; color: white; text-align:right;">CARGOS</th><!--Cargos -->
                 <th style="background-color: #24a4cc; color: white; text-align:right;">ABONOS</th><!--Abonos -->
                 <th style="background-color: #24a4cc; color: white; text-align:right;">SALDO</th><!--Saldo -->
-                <th style="background-color: #24a4cc; color: white;">DIAS</th><!--Dias vencimiento -->
+                <th style="background-color: #24a4cc; color: white; text-align:right;">DIAS</th><!--Dias vencimiento -->
                 <th style="background-color: #24a4cc; color: white; text-align:right;">VENCIDO</th><!--Saldo vencido -->
                 <th style="background-color: #24a4cc; color: white;">S</th><!--Documento2 Serie -->
                 <th style="background-color: #24a4cc; color: white;">REFCIA</th><!--Referencia -->
@@ -182,7 +182,7 @@
                   <td class="FilasFonelli" style="text-align:right;">{{formatoMoneda(movimento.Cargos)}}</td>
                   <td class="FilasFonelli" style="text-align:right;">{{formatoMoneda(movimento.Abonos)}}</td>
                   <td class="FilasFonelli" style="text-align:right;">{{formatoMoneda(movimento.Saldo)}}</td>
-                  <td class="FilasFonelli">{{movimento.DiasVencimiento}}</td>
+                  <td class="FilasFonelli" style="text-align:right;">{{movimento.DiasVencimiento}}</td>
                   <td class="FilasFonelli" style="text-align:right;">{{formatoMoneda(movimento.SaldoVencido)}}</td>
                   <td class="FilasFonelli">{{movimento.Documento2Serie}}</td>
                   <td class="FilasFonelli">{{movimento.Referencia}}</td>                
