--- a/src/app/components/relacionpedidos/relacionpedidos.component.html
+++ b/src/app/components/relacionpedidos/relacionpedidos.component.html
@@ -354,8 +354,8 @@
 
       <div id="pdfTable" #pdfTable>
         <table class="table table-hover table-striped" >
-          <thead>
-            <tr class="EncTabla">
+          <thead >
+            <tr class="EncTabla" >
               <th *ngIf="!bCliente" style="background-color: #24a4cc; color: white;" >TP</th><!--Pedido codigo -->
               <th *ngIf="!bCliente" style="background-color: #24a4cc; color: white;">L</th><!-- Pedido letra -->
               <th style="background-color: #24a4cc; color: white;">PEDIDO</th><!--Pedido folio -->
@@ -405,19 +405,19 @@
                   <td *ngIf="!bCliente" class="FilasFonelli text-left">{{pedido.FechaPedidoProduccion}}</td>
                   <td class="FilasFonelli text-left">{{pedido.FechaCancelacion}}</td>
                   <td class="FilasFonelli text-left">{{pedido.PedidoStatus}}</td>
-                  <td class="FilasFonelli" >{{pedido.DiasAtraso}}</td>
-                  <td class="FilasFonelli" >{{pedido.CantidadPedida}}</td>
+                  <td class="FilasFonelli" style="text-align:right;">{{pedido.DiasAtraso}}</td>
+                  <td class="FilasFonelli" style="text-align:right;">{{pedido.CantidadPedida}}</td>
                   <td class="FilasFonelli" style="text-align:right;">{{formatoMoneda(pedido.CantidadPedidaImporte)}}</td>
                   <td *ngIf="!bCliente" class="FilasFonelli" style="text-align:right;">{{formatoMoneda(pedido.CantidadPedidaValorAgregado)}}</td>                
-                  <td class="FilasFonelli" >{{pedido.CantidadSurtida}}</td>                
+                  <td class="FilasFonelli" style="text-align:right;">{{pedido.CantidadSurtida}}</td>                
                   <td class="FilasFonelli" style="text-align:right;">{{formatoMoneda(pedido.CantidadSurtidaImporte)}}</td>                
                   <td *ngIf="!bCliente" class="FilasFonelli">{{formatoMoneda(pedido.CantidadSurtidaValorAgregado)}}</td>                
-                  <td class="FilasFonelli">{{pedido.DiferenciaCantidadProducido}}</td>                
+                  <td class="FilasFonelli" style="text-align:right;">{{pedido.DiferenciaCantidadProducido}}</td>                
                   <td class="FilasFonelli" style="text-align:right;">{{formatoMoneda(pedido.DiferenciaImporteSurtido)}}</td>                
                   <td class="FilasFonelli" style="text-align:right;">{{formatoMoneda(pedido.DiferenciaValorAgregado)}}</td>                
-                  <td class="FilasFonelli" >{{pedido.CantidadPedidaProduccion}}</td>                
-                  <td class="FilasFonelli" >{{pedido.CantidadProducida}}</td>                
-                  <td class="FilasFonelli" >{{pedido.DiferenciaCantidadProducido}}</td>                
+                  <td class="FilasFonelli" style="text-align:right;">{{pedido.CantidadPedidaProduccion}}</td>                
+                  <td class="FilasFonelli" style="text-align:right;">{{pedido.CantidadProducida}}</td>                
+                  <td class="FilasFonelli" style="text-align:right;">{{pedido.DiferenciaCantidadProducido}}</td>                
                 </tr>
                 
 
@@ -433,7 +433,7 @@
                   <td class="FilasFonBold">{{tipoPed.TipoPedido}}</td>
                   <td></td>
                   <td></td>   
-                  <td class="FilasFonBold">{{getTotalCanPed(tipoPed.Pedidos)}}</td>
+                  <td class="FilasFonBold" style="text-align:right;">{{getTotalCanPed(tipoPed.Pedidos)}}</td>
                   <td class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalImportes(tipoPed.Pedidos))}}</td>
                   <td *ngIf="!bCliente" class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalCPValorAgregado(tipoPed.Pedidos))}}</td>
                   <td class="FilasFonBold">{{getTotalCanSurtida(tipoPed.Pedidos)}}</td>
@@ -442,9 +442,9 @@
                   <td class="FilasFonBold">{{getTotalDifCantidadPro(tipoPed.Pedidos)}}</td>
                   <td class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalDifImporteSurtido(tipoPed.Pedidos))}}</td>
                   <td class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalDifValorAgregado(tipoPed.Pedidos))}}</td>
-                  <td class="FilasFonBold" >{{formatoMoneda(getTotalCantPedidaProd(tipoPed.Pedidos))}}</td>
-                  <td class="FilasFonBold" >{{formatoMoneda(getTotalCantidadProd(tipoPed.Pedidos))}}</td>
-                  <td class="FilasFonBold" >{{formatoMoneda(getTotalDifCantidadProd(tipoPed.Pedidos))}}</td>
+                  <td class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalCantPedidaProd(tipoPed.Pedidos))}}</td>
+                  <td class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalCantidadProd(tipoPed.Pedidos))}}</td>
+                  <td class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalDifCantidadProd(tipoPed.Pedidos))}}</td>
                 </tr>               
               <!-- </ng-container> -->
             </ng-container>
@@ -461,7 +461,7 @@
               <td class="FilasFonBold">OFICINA</td>
               <td></td>
               <td></td> 
-              <td class="FilasFonBold">{{getTotalCanPedOficina(relPed.TipoPedido)}}</td>
+              <td class="FilasFonBold" style="text-align:right;">{{getTotalCanPedOficina(relPed.TipoPedido)}}</td>
               <td class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalImportesOficina(relPed.TipoPedido))}}</td>
               <td *ngIf="!bCliente" class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalCPValorAgregadoOficina(relPed.TipoPedido))}}</td>
               <td class="FilasFonBold">{{getTotalCanSurtidaOficina(relPed.TipoPedido)}}</td>
@@ -470,9 +470,9 @@
               <td class="FilasFonBold">{{getTotalDifCantidadProOficina(relPed.TipoPedido)}}</td>
               <td class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalDifImporteSurtidoOficina(relPed.TipoPedido))}}</td>  
               <td class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalDifValorAgregadoOficina(relPed.TipoPedido))}}</td>  
-              <td class="FilasFonBold" >{{formatoMoneda(getTotalCantPedidoProdOficina(relPed.TipoPedido))}}</td>  
-              <td class="FilasFonBold" >{{formatoMoneda(getTotalCantidadProducidaOficina(relPed.TipoPedido))}}</td>  
-              <td class="FilasFonBold" >{{formatoMoneda(getTotalDifCantidadProdOficina(relPed.TipoPedido))}}</td>  
+              <td class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalCantPedidoProdOficina(relPed.TipoPedido))}}</td>  
+              <td class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalCantidadProducidaOficina(relPed.TipoPedido))}}</td>  
+              <td class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalDifCantidadProdOficina(relPed.TipoPedido))}}</td>  
             </tr>
           </ng-container>               
           
@@ -488,7 +488,7 @@
             <td class="FilasFonBold">GRAN TOTAL</td>
             <td></td>
             <td></td> 
-            <td class="FilasFonBold">{{getTotalCanPedGranTotal(oRelacionPedRes.Contenido)}}</td>
+            <td class="FilasFonBold" style="text-align:right;">{{getTotalCanPedGranTotal(oRelacionPedRes.Contenido)}}</td>
             <td class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalImportesGranTotal(oRelacionPedRes.Contenido))}}</td>
             <td  *ngIf="!bCliente" class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalCPValorAgregadoGranTotal(oRelacionPedRes.Contenido))}}</td>
             <td class="FilasFonBold ">{{getTotalCanSurtidaGranTotal(oRelacionPedRes.Contenido)}}</td>
@@ -497,9 +497,9 @@
             <td class="FilasFonBold">{{getTotalDifCantidadProGranTotal(oRelacionPedRes.Contenido)}}</td>
             <td class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalDifImporteSurtidoGranTotal(oRelacionPedRes.Contenido))}}</td>
             <td class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalDifValorAgregadoGranTotal(oRelacionPedRes.Contenido))}}</td>
-            <td class="FilasFonBold" >{{formatoMoneda(getTotalCantPedProdGranTotal(oRelacionPedRes.Contenido))}}</td>
-            <td class="FilasFonBold" >{{formatoMoneda(getTotalCantidadProdGranTotal(oRelacionPedRes.Contenido))}}</td>
-            <td class="FilasFonBold" >{{formatoMoneda(getTotalDifCantidadProdGranTotal(oRelacionPedRes.Contenido))}}</td>
+            <td class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalCantPedProdGranTotal(oRelacionPedRes.Contenido))}}</td>
+            <td class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalCantidadProdGranTotal(oRelacionPedRes.Contenido))}}</td>
+            <td class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalDifCantidadProdGranTotal(oRelacionPedRes.Contenido))}}</td>
           </tr>
 
           </tbody>               
