--- a/src/app/components/ventasclientearticulo/ventasclientearticulo.component.html
+++ b/src/app/components/ventasclientearticulo/ventasclientearticulo.component.html
@@ -404,7 +404,8 @@
                     </button> 
                   </div> 
             </div>
-          <div id="pdfTable" #pdfTable>
+
+        <div *ngIf="bFiltroOrden"  id="pdfTable" #pdfTable>
             <table class="table table-hover table-striped  ">
               <thead>
                 <tr class="EncTabla">
@@ -430,9 +431,8 @@
                     <td></td>
                     <td></td>                 
                   </tr>
-                  <ng-container *ngFor="let cat of venArt.Categorias;">                    
-                  
-                    <tr class="table-warning" [hidden]="!bFiltroOrden" >
+                  <ng-container *ngFor="let cat of venArt.Categorias;">              
+                    <tr class="table-warning" >
                       <td class="FilasFonelli">{{'CATEGORIA ' +cat.CategoriaCodigo + ' : ' + cat.CategoriaNombre }}</td>   
                       <td></td>
                     <td></td>
@@ -513,8 +513,150 @@
               </tbody>               
             </table>
         </div> 
+
+        <div *ngIf="!bFiltroOrden" id="pdfTable" #pdfTable> <!--Piezas o importe-->
+          <table class="table table-hover table-striped  ">
+            <thead>
+              <tr class="EncTabla">
+                <th style="background-color: #24a4cc; color: white;">NUM</th>
+                <th style="background-color: #24a4cc; color: white;">FIL</th>
+                <th style="background-color: #24a4cc; color: white;">LN</th>                
+                <th style="background-color: #24a4cc; color: white;">CÓDIGO</th>
+                <th style="background-color: #24a4cc; color: white;">CAT</th>
+                <th style="background-color: #24a4cc; color: white;">DESCRIPCION</th>
+                <th style="background-color: #24a4cc; color: white; text-align: right;">TIPO</th>
+                <th style="background-color: #24a4cc; color: white; text-align: right;">PIEZAS</th>
+                <th style="background-color: #24a4cc; color: white; text-align: right;">%P/TOTAL</th>
+                <th style="background-color: #24a4cc; color: white; text-align: right;">GRAMOS</th>
+                <th style="background-color: #24a4cc; color: white; text-align: right;">%G/TOTAL</th>
+                <th style="background-color: #24a4cc; color: white; text-align: right;">IMPORTE VENTA</th>              
+              </tr>
+            </thead>
+            <tbody>
+              <ng-container *ngFor="let venArt of oVentasCliRes.Contenido | searchventasclientearticulo: searchtext">
+                <!-- <tr class="table-info">                    
+                  <td class="FilasFonelli">{{venArt.ClienteCodigo + ' ' + venArt.ClienteNombre }}</td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td> 
+                  <td></td>
+                  <td></td>                 
+                  <td></td>                 
+                  <td></td>                 
+                  <td></td>                 
+                  <td></td>                 
+                </tr> -->
+                <ng-container *ngFor="let cat of venArt.Categorias;">              
+                  <tr class="table-warning" >
+                    <td class="FilasFonelli">{{'CATEGORIA ' +cat.CategoriaCodigo + ' : ' + cat.CategoriaNombre }}</td>   
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td> 
+                    <td></td>
+                    <td></td>                    
+                    <td></td>                    
+                    <td></td>                    
+                    <td></td>                    
+                    <td></td>                    
+                  </tr> 
+
+                  <ng-container *ngFor="let subCat of cat.Subcategorias;">
+                      <tr>  
+                      <td class="FilasFonelli">{{subCat.SubcategoriaCodigo + ' - ' + subCat.SubcategoriaNombre }}</td>                
+                      <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td> 
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td> 
+                    </tr>  
+
+                    <ng-container *ngFor="let linPro of subCat.LineasProducto;">
+                      <tr *ngFor="let art of linPro.Articulos;">  
+                        <td class="FilasFonelli">{{venArt.ClienteCodigo}}</td>
+                        <td class="FilasFonelli">{{venArt.ClienteFilial}}</td>
+                        <td class="FilasFonelli">{{linPro.LineaCodigo}}</td>
+                        <td class="FilasFonelli">{{art.ArticuloCodigo}}</td>
+                        <td class="FilasFonelli">{{cat.CategoriaCodigo}}</td>
+                        <td class="FilasFonelli">{{art.ArticuloDescripc}}</td>
+                        <td class="FilasFonelli">{{art.ArticuloTipo}}</td>
+                        <td class="FilasFonelli text-right">{{getTotalPiezasArticulo(linPro.Articulos)}}</td>
+                        <td class="FilasFonelli text-right">{{getTotalPiezasPorArticulo(linPro.Articulos)}}</td>
+                        <td class="FilasFonelli text-right">{{getTotalGramosArticulo(linPro.Articulos)}}</td>
+                        <td class="FilasFonelli text-right">{{getTotalGramosPorArticulo(linPro.Articulos)}}</td>
+                        <td class="FilasFonelli text-right">{{formatoMoneda(getTotalImpVenArticulo(linPro.Articulos))}}</td>
+                      </tr> 
+
+                    </ng-container>
+
+                    <tr>  
+                      <td></td>
+                      <td></td>      
+                      <td></td>      
+                      <td></td>      
+                      <td></td>      
+                      <td></td>      
+                      <td class="FilasFonelli text-right">Total SubCategoria</td>
+                      <td class="FilasFonBold text-right">{{getTotalPiezasxSubCat(subCat.LineasProducto)}}</td>
+                      <td class="FilasFonBold text-right">{{getTotalPiezasPorxSubCat(subCat.LineasProducto)}}</td>
+                      <td class="FilasFonBold text-right">{{getTotalGramosxSubCat(subCat.LineasProducto)}}</td>
+                      <td class="FilasFonBold text-right">{{getTotalGramosPorxSubCat(subCat.LineasProducto)}}</td>
+                      <td class="FilasFonBold text-right">{{formatoMoneda(getTotalImpVenxSubCat(subCat.LineasProducto))}}</td>
+                    </tr>  
+
+                  </ng-container>
+
+                  <tr>  
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>      
+                    <td class="FilasFonelli text-right">Total Categoria</td>
+                    <td class="FilasFonBold text-right">{{getTotalPiezasxCategoria(cat.Subcategorias)}}</td>
+                    <td class="FilasFonBold text-right">{{getTotalPiezasPorxCategoria(cat.Subcategorias)}}</td>
+                    <td class="FilasFonBold text-right">{{getTotalGramosxCategoria(cat.Subcategorias)}}</td>
+                    <td class="FilasFonBold text-right">{{getTotalGramosPorxCategoria(cat.Subcategorias)}}</td>
+                    <td class="FilasFonBold text-right">{{formatoMoneda(getTotalImpVenxCategoria(cat.Subcategorias))}}</td>
+                  </tr>                    
+
+                </ng-container>
+  
+              <!-- TOTAL CLIENTE-->
+
+              <tr>  
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>      
+                <td class="FilasFonelli text-right">Total Cliente</td>
+                <td class="FilasFonBold text-right">{{getTotalPiezasxCliente(oVentasCliRes.Contenido)}}</td>
+                <td class="FilasFonBold text-right">{{getTotalPiezasPorxCliente(oVentasCliRes.Contenido)}}</td>
+                <td class="FilasFonBold text-right">{{getTotalGramosxCliente(oVentasCliRes.Contenido)}}</td>
+                <td class="FilasFonBold text-right">{{getTotalGramosPorxCliente(oVentasCliRes.Contenido)}}</td>
+                <td class="FilasFonBold text-right">{{formatoMoneda(getTotalImpVenxCliente(oVentasCliRes.Contenido))}}</td>
+              </tr> 
+            </ng-container>               
+
+  
+          </tbody>               
+        </table>
       </div> 
-    </section>
+
+    </div> 
+  </section>
   
   
       
