Se cambia link de tienda en linea

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -46,7 +46,7 @@
 
                     <li class="nav-item">
                         <!--<a class="nav-link" href="#about">Our Studio</a>-->
-                        <a class="nav-link" href ="https://fonelli.com/" target="_blank">Tienda en linea</a>
+                        <a class="nav-link" href ="https://shop.fonelli.com/" target="_blank">Tienda en linea</a>
                         
                     </li>
 
